feat(kosi): phase 2 — KIR, the CFG, access paths, and every §4 desugaring
kosi-kir is the owned IR (02-ARCHITECTURE.md §4): 21 three-address
instructions, basic blocks with explicit branch edges and list-order
fallthrough, field-sensitive access paths (depth cap 5, '*' collapse),
and a validator whose reachability walk fails any unreachable-but-emitted
block — KirValidatorTest.anUnreachableEmittedBlockIsAFinding is the test
that fails when that check is removed. KirRoundTripTest pins the dump
contract: write -> read -> write byte-identical, for names with spaces,
quotes and escaped newlines included.

kosi-front lowers PSI + one resolution pass into it. Every §4 desugaring
is implemented and unit-tested negative-first in KirLoweringTest:
string templates -> StringConcat (all-literal templates stay Loads);
?. -> branch + phi; ?: -> phi (Elvis opcode only at argument positions);
!! -> checked cast + throw branch; delegated properties -> getValue;
data class -> synthesized copy/componentN; destructuring -> componentN;
for -> iterator/hasNext/next; operators -> named calls (the SYNTAX tier's
names — compareTo, not less — so both tiers speak one naming); scope
functions -> inlined body with the receiver bound + retained edge;
use -> try/finally with close in the finally arm; suspend call ->
Call + SuspendPoint. A construct the lowering cannot perform is counted
by construct in stats.loweringFailures{}, published beside
stats.functionsLowered (the denominator), and diagnosed as
lowering-failed. kosi kir dump enforces the round-trip and CFG validation
on every invocation.

loweringFailures is empty on all 24 fixtures and 0 across all five
pinned repos — 0.000% of 13,548 functions lowered (spring-fu 745,
ktor-samples 552, kampkit 89, nowinandroid 963, anki-android 11,399).
The first pass cleared every fixture but failed 15-65% of functions on
the repos; the itemised map is what made each real-code gap fixable by
name (blocks in value position, prefix/postfix operators, as-c